adding Ethans revisions to last section

--- a/multicopy_taxa_report.Rmd
+++ b/multicopy_taxa_report.Rmd
@@ -251,21 +251,23 @@ $$
     
 > **Equation 1** A simple linear relationship between 16S rRNA copy and species count underlies the physical system
 
-In ideal conditions, organism identification and cluster disambiguation could be treated as a linear optimization problem under these conditions by defining a suitable objective function ($c$). Even in this case, the $n$ by $m$ matrix on the left hand side of this equation represents a very high dimensional and sparse space that will in a vast majority of situations have multiple optimal solutions. So, the linear optimization approach to multicopy guided taxon quantification may have limitations even under ideal measurement conditions.
+In ideal conditions, organism identification and cluster disambiguation could be treated as a linear optimization problem under these conditions by defining a suitable objective function ($c$). Even in this case, the $n$ by $m$ matrix on the left hand side of this equation represents a very high dimensional and sparse space that will in a vast majority of situations have multiple optimal solutions. So, the linear optimization approach to multicopy guided taxon quantification may have limitations even under ideal measurement conditions. Indeed, our implementation of this approach (shown in [classify_by_constraint.R](https://github.com/nate-d-olson/multicopy_cluster_analysis/blob/master/classify_by_constraint.R)) yielded incorrect classifications.
 
 Several other major shortcomings hinder the success of this naive approach. PCR amplification is not uniform or linear, and so certain sequences will be overrepresented in such a way that the linear relationships no longer hold. In addition, the number of different OTUs detected is known to be a function of sequencing depth [@Paulson2013]. Finally, the prediction of species counts is biased by the numbers and types of species present in the GenBank reference database. 
 
-One possible structure of the relationship between measured counts and taxa present is given in Equation 2. Using a relationship of this type requires a substantial amount of careful work and a great deal of additional data for the purpose of estimating parameters with each taxon-OTU pairing. Additional mathematical work is required to determine effective estimators for each parameter and formulation the problem more specifically.
+
+One possible structure of the relationship between measured counts and taxa present is given in Equation 2. Using a relationship of this type requires a substantial amount of careful work and a great deal of additional data for the purpose of estimating parameters with each taxon/OTU pairing. Additional mathematical work is required to determine effective estimators for each parameter and to formulate the problem more precisely. The information gained by this model would support the use of expectation maximization to optimize taxonomic binning.
+
 
 $$E \left [ count_{OTU\#i} \right ] = E \left [ \sum_{j=1}^{m}PD_{ij}(depth) \cdot \left( c_{ij}+\epsilon\right ) \cdot x_{j} \right ] $$
 
 > **Equation 2** The expected number of sequences in OTU $i$ equals the sum of the weighted expectation for each component mapping to OTU $i$. These expectations depend on $PD_{ij}$ (the probability of detection in a transcript from species $j$), number of copies of the relevant sequence, and statistical noise in the observation.
 
 
-An alternative solution is to approach taxon estimation through the lens of expectation maximation, similar to an approach used for RNA-Seq quantification[@Patro2014]. OTUs may be collapsed into OTU equivalence classes, consisting of taxa mapping to an OTU sequence which have similar copy number of 16S sequences clustered to that OTU. 
+Simpler models may be effective in directing quantification and binning. An approach used for RNA-Seq quantification[@Patro2014], uses relatively simple expectations to guide quantification of sequences based on even distribution of k-mers on those reads. In our case, OTUs may be collapsed into OTU equivalence classes, consisting of taxa mapping to an OTU sequence which have similar copy number of 16S sequences clustered to that OTU. The approach seeks to attain nearly even distribution of OTU counts over a single taxon; thus, assignment of equivalence OTUs to any taxon supports the assignment of other equivalence OTUs to that taxon.
 
 ## Conclusion
-Based on our initial analysis of 16S rRNA multi-copy sequences, clusters can be contain sequences from genomes with different copy numbers, sequences from a single genome maybe assigned to different clusters, and sequences from multiple taxa may be assigned to the same cluster. These three issues indicate that single-value cluster copy number correction methods may produce biased results, though the extent to this bias was not assessed.  Although our attempt to develop methods to correct for this bias were unsuccessful, a copy number correction method that accounts for copy number and taxonomic cluster ambiguity could improve the accuracy of 16S rRNA microbial community analysis.  The 16S rRNA gene sequences in our database were only identified using a single method and likely includes non-16S rRNA sequences. Finally, 16S rRNA sequencing methods only target part of the gene.  Further analysis of taxonomic and copy number ambiguity should include a charaterization of the 16S rRNA gene regions most commonly used in 16S rRNA metagenomic studies.  
- 
+Based on our initial analysis of 16S rRNA multi-copy sequences, clusters can be contain sequences from genomes with different copy numbers, sequences from a single genome maybe assigned to different clusters, and sequences from multiple taxa may be assigned to the same cluster. These three issues indicate that single-value cluster copy number correction methods may produce biased results, though the extent to this bias was not assessed. Although our attempt to develop methods to correct for this bias were unsuccessful, a copy number correction method that accounts for copy number and taxonomic cluster ambiguity could improve the accuracy of 16S rRNA microbial community analysis.  The 16S rRNA gene sequences in our database were only identified using a single method and likely includes non-16S rRNA sequences. Finally, 16S rRNA sequencing methods only target part of the gene.  Further analysis of taxonomic and copy number ambiguity should include a charaterization of the 16S rRNA gene regions most commonly used in 16S rRNA metagenomic studies.  
+
 
 ## References
